# prod-ds-kit

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  NOTICE.md  README.md  REPRODUCIBILITY.md  install.sh  prodds-kit  prodds_kit.py  protocol.md  protocol.yaml  pyproject.toml  reproduce.sh  reproduce_EAB.sh  wrap_dsdgen.py  wrap_dsqgen.py
config/: mcv_profiles.yml  null_profiles.yml  query_referenced_columns.txt  string_profiles.yml
configs/: seed_overrides_sf100_str10_duckdb.yml  seed_overrides_sf10_str1.yml  seed_overrides_sf10_str10.yml  seed_overrides_sf1_str1.yml  seed_overrides_sf1_str10.yml
docs/: column-recast.md  dialect-adaptations.md  experimental-protocol.md  join-amplification.md  mcv-profiles.md  null-profiles.md  reproducibility.md  stringification-levels.md
experiments/: README.md  __init__.py  cli.py  config.example.yaml  config.py  docker_utils.py  logging_utils.py  make_skew_table.py  plot_cdf_crossbench.py  plot_results.py  plot_str_crossengine.py  process.py  resources.py  results.py  runner.py  utils.py
query_templates/: duckdb.tpl  postgres.tpl  query10_ext.tpl  query11_ext.tpl  query12_ext.tpl  query14_ext.tpl  query15_ext.tpl  query16_ext.tpl  query17_ext.tpl  query18_ext.tpl  query19_ext.tpl  query1_ext.tpl  query20_ext.tpl  query21_ext.tpl  query22_ext.tpl  query23_ext.tpl  query24_ext.tpl  query25_ext.tpl  query26_ext.tpl  query27_ext.tpl  query28_ext.tpl  query29_ext.tpl  query2_ext.tpl  query30_ext.tpl  query32_ext.tpl  query33_ext.tpl  query34_ext.tpl  query35_ext.tpl  query36_ext.tpl  query37_ext.tpl  query38_ext.tpl  query3_ext.tpl  query40_ext.tpl  query41_ext.tpl  query42_ext.tpl  query43_ext.tpl  query44_ext.tpl  query45_ext.tpl  query46_ext.tpl  query47_ext.tpl  (+53 more)
scripts/: SNOWFLAKE_BENCHMARK.md  snowflake_benchmark.sh
tests/: conftest.py  test_domain_consistency.py  test_extended_templates.py  test_generate_join_query.py  test_generate_union_query.py  test_mcv_skew.py  test_null_skew.py  test_split_queries.py  test_str_plus_extension.py  test_stringification_levels.py  test_stringify.py  (+5 more)
(+445 files in other folders)
